# test

./: .codespellrc  .ecrc  .eslintrc.yml  .gitignore  .markdown-link-check.json  .prettierignore  LICENSE.txt  README.md  Taskfile.yml  codecov.yml  go.mod  go.sum  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  tools.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: README.md  build.yml  check-ejs-task.yml  check-files-task.yml  check-general-formatting-task.yml  check-go-task.yml  check-javascript-task.yml  check-json-task.yml  check-license.yml  check-markdown-task.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-shell-task.yml  check-taskfiles.yml  check-toc-task.yml  check-workflows-task.yml  check-yaml-task.yml  foo.yml  pipx.yml  repo-vars.yml  spell-check-task.yml  sync-labels-npm.yml  test-javascript-jest-task.yml  test-python-poetry-task.yml
app/: README.md  index.js
assets/: README.md  bump-package.sh
docs/: CONTRIBUTING.md  acknowledgments.md  development.md
docs/contributor-guide/: issues.md  pull-requests.md
docs/maintainer-guide/: maintainer-guide.md  release-notes-guidelines.md
etc/: README.md  generator-kb-document-configuration-schema.json  generator-kb-document-prompts-configuration-schema.json
ignore/: prompts.js
pipx-data/: pyproject.toml
pipx-installed-dependencies/: pyproject.toml
test/: test.py
tests/: README.md  integration.js
tools/: pyproject.toml
(+65 files in other folders)
