[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"

# The dependencies in this group are installed using pipx; NOT Poetry. The use of a `poetry` section is a hack required
# in order to be able to manage updates of these dependencies via Dependabot, as used for all other dependencies.
[tool.poetry.group.pipx]
optional = true

[tool.poetry.group.pipx.dependencies]
poetry = "1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
